--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Imc</title>
+    <!-- <base href="/" /> -->
     <base href="https://CostaDenis.github.io/pwa-example/" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
